  * Moloch >= 2.0.0 requires NodeJS 10.x
  * Moloch >= 1.6.0 requires NodeJS 8.x, 8.12 or later
  * Moloch >= 1.0.0 requires NodeJS 8.x
  * Moloch >= 0.20.0 requires NodeJS 6.x
  * Moloch >= 0.18.1 requires NodeJS 4.x

NOTICE: Restart wiseService before capture when upgrading
NOTICE: Cross-cluster Shortcuts require you to not restart all your viewers at once after upgrading

3.3.1 2022/02/xx

3.3.0 2022/01/19
  - BREAKING - non standard pcap files now use the .arkime extension
  - BREAKING - for wise multiES entries, prefix: now defaults to arkime_
  - BREAKING - for wise threatstream source you must create md5 index manually
  - release - node 14.18.3
  - viewer - default to hunt reassembled packets
  - viewer - add descriptions to hunts
  - viewer - hide graph/map (speeds up large queries)
  - viewer - history logs es query/indices
  - viewer - open up to 50 sessions at a time button
  - viewer - make sure hunt progress bar shows up
  - viewer - handle corrupt pcap files better
  - viewer - handle hunt errors better
  - viewer - scrubbing won't crash on unsupported files
  - capture - make sure file/seq es requests have higher priority
  - capture - support pcap flies with 0 timestamp
  - capture - use .arkime file extension for non standard pcap files
  - capture - new _dropBySession rule op
  - capture - fix infite recursion - thanks albntomat0_1
  - capture - improve udp/tcp header length checking
  - capture - improve error messages for field setting issues
  - capture - cache when getting pcap data from S3 (thanks pjsg)
  - capture - New ecsEventProvider setting
  - wise - switch from node-sqlite3 to better-sqlite3 package
  - all - support creating gzip files, set simpleGzipBlockSize
  - all - support creating pcap files with short packet headers, set simpleShortHeader

3.2.1 2021/12/14
  - esproxy - handle sessions2 without prefix
  - capture - new parseHTTPHeaderValueMaxLen replaces hard coded 1024
  - viewer - some hunt fixes