@@ -1,4 +1,4 @@
-use Test::More tests => 144;
+use Test::More tests => 216;
 use Cwd;
 use URI::Escape;
 use MolochTest;
@@ -13,9 +13,12 @@ my $token = getTokenCookie();
 
 sub doTest {
     my ($encryption, $gzip, $shortheader) = @_;
-    my $tag = "$prefix-$encryption-$gzip-$shortheader";
+    my ($tag, $cmd, $id, $json, $content, $result);
+
+  ###### socks-http-pass.pcap
+    $tag = "socks-$prefix-$encryption-$gzip-$shortheader";
     #diag $tag;
-    my $cmd = "../capture/capture -c config.test.ini -n test --copy -r pcap/socks-http-pass.pcap --tag $tag";
+    $cmd = "../capture/capture -c config.test.ini -n test --copy -r pcap/socks-http-pass.pcap --tag $tag";
     if (defined $encryption) {
         $cmd .= " -o simpleEncoding=$encryption -o simpleKEKId=test";
     }
@@ -28,28 +31,52 @@ sub doTest {
     #diag "$cmd\n";
     system($cmd);
 
-    my $json = countTest(1, "date=-1&expression=" . uri_escape("tags=$tag && port.src == 54072"));
-    my $id = $json->{data}->[0]->{id};
+    $json = countTest(1, "date=-1&expression=" . uri_escape("tags=$tag && port.src == 54072"));
+    $id = $json->{data}->[0]->{id};
 
     $json = countTest(1, "date=-1&expression=" . uri_escape("tags=$tag && port.src == 54068"));
     my $sid = $json->{data}->[0]->{id};
 
-    my $content = $MolochTest::userAgent->get("http://$MolochTest::host:8123/test/session/$id/packets?line=false&ts=false&base=ascii")->content;
-    #diag $content;
+    $content = $MolochTest::userAgent->get("http://$MolochTest::host:8123/test/session/$id/packets?line=false&ts=false&base=ascii")->content;
 
     # Test string crosses 2 packets
     ok ($content =~ /domain in examples without prior coordination or asking for permission/);
 
     # Scrub
-    my $result = viewerPostToken("/delete?removePcap=true&removeSpi=false&date=-1", "ids=$sid", $token);
+    $result = viewerPostToken("/delete?removePcap=true&removeSpi=false&date=-1", "ids=$sid", $token);
     #diag Dumper($result);
 
     # Test again, not the same that was scrubbed
-    my $content = $MolochTest::userAgent->get("http://$MolochTest::host:8123/test/session/$id/packets?line=false&ts=false&base=ascii")->content;
+    $content = $MolochTest::userAgent->get("http://$MolochTest::host:8123/test/session/$id/packets?line=false&ts=false&base=ascii")->content;
     #diag $content;
 
     # Test string crosses 2 packets
     ok ($content =~ /domain in examples without prior coordination or asking for permission/);
+
+  ###### wireshark-bdat.pcap - test big packets
+    $tag = "bdat-$prefix-$encryption-$gzip-$shortheader";
+    #diag $tag;
+    $cmd = "../capture/capture -c config.test.ini -n test --copy -r pcap/wireshark-bdat.pcap --tag $tag";
+    if (defined $encryption) {
+        $cmd .= " -o simpleEncoding=$encryption -o simpleKEKId=test";
+    }
+    if (defined $gzip) {
+        $cmd .= " -o simpleGzipBlockSize=$gzip";
+    }
+    if (defined $shortheader) {
+        $cmd .= " -o simpleShortHeader=$shortheader";
+    }
+    #diag "$cmd\n";
+    system($cmd);
+
+    $json = countTest(1, "date=-1&expression=" . uri_escape("tags=$tag"));
+    $id = $json->{data}->[0]->{id};
+
+    $content = $MolochTest::userAgent->get("http://$MolochTest::host:8123/test/session/$id/packets?line=false&ts=false&base=ascii")->content;
+    #diag $content;
+
+    # Test string crosses 2 packets (/s matches across lines)
+    ok ($content =~ /BDAT 8380 LAST.1234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890/s);
 }
 
 ### MAIN ###
